Fix direction and text alignment for rtl development template

--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -77,9 +77,6 @@ h2 .rssicon{
 .contributors{
 	text-align:right;
 }
-.contributors div{
-	direction:ltr;
-}
 .downloadbox div{
 	text-align:right;
 }
@@ -199,6 +196,12 @@ h2 .rssicon{
 	display:inline-block;
 	margin-left:0;
 	margin-right:6px;
+}
+
+.listtable div div{
+	text-align:right;
+	padding-right:0;
+	padding-left:20px;
 }
 
 .eventtable div div{
